--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       src="/Images/bg-hero-2.png"
       class="position-absolute"
       style="bottom: -25%; left: 0; z-index: -2"
-      width="500"
+      width="400"
     />
     <section
       class="container d-flex justify-content-between g-5"
@@ -184,7 +184,7 @@
     </section>
 
     <section class="container" style="margin-top: -4rem">
-      <h1 class="fs-1">
+      <h1 class="fs-3 ms-5">
         Popular
         <span style="text-decoration: underline; text-decoration-color: orange"
           >Now</span
@@ -332,7 +332,7 @@
     ></div>
 
     <section class="container pt-5">
-      <h1 class="fs-1 mb-5">
+      <h1 class="fs-3 mb-5" style="margin-left: 50px;">
         How to use delivery
         <span style="text-decoration: underline; text-decoration-color: orange"
           >service</span
